# django-settings-env

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  ChangeLog  ChangeLog.md  LICENSE  LICENSE.md  README.md  pyproject.toml  ruff.toml
.github/actions/test-and-build/: action.yml
.github/workflows/: pytest.yml  python-release-publish.yml  python-test-and-build.yml  release-build-and-publish.yml
django_settings_env/: __init__.py  deferred.py  env_django.py
django_settings_env/parser/: __init__.py
django_settings_env/plugin/: __init__.py  plugin_cache.py  plugin_database.py  plugin_email.py  plugin_queue.py  plugin_search.py  plugin_tasks.py
django_settings_env/urls/: cache.py  database.py  email.py  search.py  url.py
tests/: test_deferred.py  test_django_wrapper.py
tests/parser/: test_parsed_url.py
tests/plugin/: test_cache.py  test_database.py  test_email.py  test_queue.py  test_search.py
tests/urls/: test_cache.py  test_database.py  test_email.py  test_urls.py
