[project]
name = "django-settings-env"
version = "5.2.0"
description = "12-factor.net settings handler for Django"
authors = [
    {name = "David Nugent", email = "davidn@uniquode.io"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
dependencies = [
    "django>=4.0",
    "envex>=3.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest>=8.2",
    "ruff>=0.6.8",
]

[project.optional-dependencies]
extras = [
    "django-class-settings>=0.2",
]
vault = [
    "hvac>=1.1.1",
]

[tool.pytest.ini-options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = [ "django_settings_env" ]
testpaths = [ "tests" ]
